--- a/SpointLiteVersion/Views/clientes1/Create.cshtml
+++ b/SpointLiteVersion/Views/clientes1/Create.cshtml
@@ -12,173 +12,177 @@
             {
                 @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
+                <div class="form-horizontal">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @if (ViewBag.foto != null)
-                {
-                    <center>
-                        <div>
-                            <input type="file" accept="image/*" id="fotosubir" />
-                            <label for="fotosubir">
-                                <img src="@ViewBag.foto" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
-                            </label>
-                        </div>
-                        <span>Seleccionar</span>
-                        <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
-
-                    </center>
-                }
-                else
-                {
-                    <center>
-                        <div>
-                            <input type="file" accept="image/*" id="fotosubir" />
-                            <label for="fotosubir">
-                                <img src="~/Content/user.png" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
-                            </label>
-                        </div>
-                        <span>Seleccionar</span>
-                        <input type="hidden" name="Foto" id="Foto" value="" />
-
-                    </center>
-                }
-                <div class="col-md-12">
-                    @if (@ViewBag.id != null)
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @if (ViewBag.foto != null)
                     {
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.idCliente)
+                        <center>
+                            <div>
+                                <input type="file" accept="image/*" id="fotosubir" />
+                                <label for="fotosubir">
+                                    <img src="@ViewBag.foto" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                                </label>
+                            </div>
+                            <span>Seleccionar</span>
+                            <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
+
+                        </center>
                     }
+                    else
+                    {
+                        <center>
+                            <div>
+                                <input type="file" accept="image/*" id="fotosubir" />
+                                <label for="fotosubir">
+                                    <img src="~/Content/user.png" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                                </label>
+                            </div>
+                            <span>Seleccionar</span>
+                            <input type="hidden" name="Foto" id="Foto" value="" />
 
-
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre" } })
-                        @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
-
-                    </div>
-
-                    <div class="form-group col-md-4" style="width:35%;">
-
-                        @Html.Label("Dirección", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3">
-                        @Html.Label("Teléfono", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
-                        @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
-
-
-                    </div>
-                    <div class="form-group col-md-3">
-                        @Html.Label("Teléfono #2", htmlAttributes: new { @class = "control-label col-md-6" })
-
-                        @Html.EditorFor(model => model.telefono2, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
-                        @Html.ValidationMessageFor(model => model.telefono2, "", new { @class = "text-danger" })
-
-                    </div>
-                    <div class="form-group col-md-2">
-                        @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
-                        @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
-
-                    </div>
-                    <div class="form-group col-md-2 form1">
-                        @Html.Label("Ciudad", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.DropDownList("idciudad", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.idciudad, "", new { @class = "text-danger" })
-
-
-                    </div>
-                    <div class="col-md-1 boton">
-                        <a href="#" class="btn btn-outline-primary Datoscomprobante " data-toggle="modal" data-target="#exampleModal"><i class="fas fa-plus-circle icono"></i></a>
-
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-4">
-                        @Html.Label("Nacimiento", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        <input type="date" name="fechanacimiento" value="" class="form-control" />
-                        @Html.ValidationMessageFor(model => model.fechanacimiento, "", new { @class = "text-danger" })
-
-                    </div>
-
-                    <div class="form-group col-md-3">
-                        @Html.Label("Creditos_Aprobados", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.creditoaprobado, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.creditoaprobado, "", new { @class = "text-danger" })
-
-                    </div>
-
-
-
-
-                    <div class="form-group col-md-4" style="width:26%;">
-                        @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-
-                    </div>
-
-
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-5">
-                        @Html.LabelFor(model => model.NCF, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.NCF, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.NCF, "", new { @class = "text-danger" })
-
-                    </div>
-
-
-
-                    <div class="form-group col-md-5">
-                        @Html.Label("Limite de Tiempo", htmlAttributes: new { @class = "control-label col-md-5" })
-
-                        @Html.EditorFor(model => model.LimiteTiempo, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.LimiteTiempo, "", new { @class = "text-danger" })
-
-                    </div>
-                </div>
-                <div class="form-group col-md-10">
-
-                    @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label col-md-2" })
-
-                    @Html.TextAreaFor(model => model.Observaciones, new { @class = "form", @cols = "30", @rows = "6", @style = "margin-top:30px;" })
-                    @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
-
-                </div>
-                <div class="form-row">
-
-                    <div class="form-group col-md-10">
-
-                        @if (ViewBag.id != null)
+                        </center>
+                    }
+                    <div class="col-md-12">
+                        @if (@ViewBag.id != null)
                         {
-
-                            <a class="btn btn-danger btnelimina" href="@Url.Action("Delete","clientes1",new { id=Model.idCliente})">Eliminar</a>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.idCliente)
                         }
 
-                    </div>
-                    <div class="form-group col-md-1">
-                        <button type="submit" class="btn btn-info" id="crear"><i class="fas fa-arrow-circle-left"></i></button>
 
                     </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre" } })
+                            @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+
+                        </div>
+
+                        <div class="form-group col-md-4" style="width:35%;">
+
+                            @Html.Label("Dirección", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            @Html.Label("Teléfono", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
+                            @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
+
+
+                        </div>
+                        <div class="form-group col-md-3">
+                            @Html.Label("Teléfono #2", htmlAttributes: new { @class = "control-label col-md-6" })
+
+                            @Html.EditorFor(model => model.telefono2, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
+                            @Html.ValidationMessageFor(model => model.telefono2, "", new { @class = "text-danger" })
+
+                        </div>
+                        <div class="form-group col-md-2">
+                            @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
+                            @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
+
+                        </div>
+                        <div class="form-group col-md-2 form1">
+                            @Html.Label("Ciudad", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.DropDownList("idciudad", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.idciudad, "", new { @class = "text-danger" })
+
+
+                        </div>
+                        <div class="col-md-1 boton">
+                            <a href="#" class="btn btn-outline-primary Datoscomprobante " data-toggle="modal" data-target="#exampleModal"><i class="fas fa-plus-circle icono"></i></a>
+
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            @Html.Label("Nacimiento", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            <input type="date" name="fechanacimiento" value="" class="form-control" />
+                            @Html.ValidationMessageFor(model => model.fechanacimiento, "", new { @class = "text-danger" })
+
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            @Html.Label("Creditos_Aprobados", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.creditoaprobado, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.creditoaprobado, "", new { @class = "text-danger" })
+
+                        </div>
+
+
+
+
+                        <div class="form-group col-md-4" style="width:26%;">
+                            @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+
+                        </div>
+
+
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-5">
+                            @Html.LabelFor(model => model.NCF, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            <select name="NCF" id="NCF" class="form-control">
+                                <option value="CRÉDITO FISCAL">CRÉDITO FISCAL</option>
+                                <option value="GUBERNAMENTAL">GUBERNAMENTAL</option>
+                                <option value="CONSUMIDOR FINAL">CONSUMIDOR FINAL</option>
+                            </select>
+                            @Html.ValidationMessageFor(model => model.NCF, "", new { @class = "text-danger" })
+
+                        </div>
+
+
+
+                        <div class="form-group col-md-5">
+                            @Html.Label("Limite de Tiempo", htmlAttributes: new { @class = "control-label col-md-5" })
+
+                            @Html.EditorFor(model => model.LimiteTiempo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.LimiteTiempo, "", new { @class = "text-danger" })
+
+                        </div>
+                    </div>
+                    <div class="form-group col-md-10">
+
+                        @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                        @Html.TextAreaFor(model => model.Observaciones, new { @class = "form", @cols = "30", @rows = "6", @style = "margin-top:30px;" })
+                        @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
+
+                    </div>
+                    <div class="form-row">
+
+                        <div class="form-group col-md-10">
+
+                            @if (ViewBag.id != null)
+                            {
+
+                                <a class="btn btn-danger btnelimina" href="@Url.Action("Delete","clientes1",new { id=Model.idCliente})">Eliminar</a>
+                            }
+
+                        </div>
+                        <div class="form-group col-md-1">
+                            <button type="submit" class="btn btn-info" id="crear"><i class="fas fa-arrow-circle-left"></i></button>
+
+                        </div>
+                    </div>
                 </div>
-            </div>
             }
             <div class="modal fade modalciudad" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog model" role="document">
@@ -203,7 +207,7 @@
                     </div>
                 </div>
             </div>
-           
+
         </div>
     </div>
 </div>
@@ -211,6 +215,9 @@
 <script src="~/Scripts/inputmask/inputmask.js"></script>
 <script src="~/Scripts/inputmask/inputmask.extensions.js"></script>
 <script src="~/Scripts/inputmask/jquery.inputmask.js"></script>
+<script src="~/Scripts/jquery.numeric.js"></script>
+<script src="~/Scripts/autoNumeric/autoNumeric-min.js"></script>
+<script src="~/Scripts/autoNumeric/autoNumeric.js"></script>
 
 
 <script>
@@ -245,12 +252,45 @@
 
     $("#telefono").inputmask({ "mask": "(999) 999-9999" });
     $("#telefono2").inputmask({ "mask": "(999) 999-9999" });
-    $("#cedula").inputmask({ "mask": "999-9999999-9" });
+    //$("#cedula").inputmask({ "mask": "999-9999999-9" });
+    $("#cedula").numeric({ altDecimal: '-' });
 
 
 </script>
 <script>
+    $(function () {
+        $("#crear").on("click", function (event) {
+            var value = $("#Precio").val();
+            if (value.indexOf(',') != -1) {
+                $("#creditoaprobado").val(value.replace(/,/g, ''));
+            }
+            if (value.indexOf('$') != -1) {
+                $("#creditoaprobado").val(value.replace(/\$/g, ""));
+            }
+
+        
+           
+        })
+    });
+
+
+    $(function () {
+        $("#crear").on("click", function (event) {
+            var value = $("#Precio").val();
+            if (value.indexOf(',') != -1) {
+                $("#creditoaprobado").val(value.replace(/,/g, ''));
+            }
+            if (value.indexOf('$') != -1) {
+                $("#creditoaprobado").val(value.replace(/\$/g, ""));
+            }
+
+         
+        })
+    });
+</script>
+<script>
     $(document).ready(function () {
+        $("#creditoaprobado").autoNumeric('init', { aSign: "$ ", lZero: 'deny' });
 
         $(".Datoscomprobante").click(function () {
             $(".comprobante").load("/ciudads1/Create")
@@ -284,9 +324,9 @@
     $(function () {
 
 
-      
+
     });
-    
+
 
 
 </script>
