--- a/SpointLiteVersion/Views/suplidores/Create.cshtml
+++ b/SpointLiteVersion/Views/suplidores/Create.cshtml
@@ -13,112 +13,151 @@
             {
                 @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
+                <div class="form-horizontal">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @if (ViewBag.foto != null)
-                {
-                    <center>
-                        <div>
-                            <input type="file" accept="image/*" id="fotosubir" />
-                            <label for="fotosubir">
-                                <img src="@ViewBag.foto" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
-                            </label>
-                        </div>
-                        <span>Seleccionar</span>
-                        <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
-
-                    </center>
-                }
-                else
-                {
-                    <center>
-                        <div>
-                            <input type="file" accept="image/*" id="fotosubir" />
-                            <label for="fotosubir">
-                                <img src="~/Content/user.png" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
-                            </label>
-                        </div>
-                        <span >Seleccionar</span>
-                        <input type="hidden" name="Foto" id="Foto" value="" />
-
-                    </center>
-                }
-                @if (@ViewBag.id != null)
-                {
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.idSuplidor)
-                }
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre", @placeholder = "Ej: Juan" } })
-                        @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+                    @if (ViewBag.foto != null)
+                    {
+                        <center>
+                            <div>
+                                <input type="file" accept="image/*" id="fotosubir" />
+                                <label for="fotosubir">
+                                    <img src="@ViewBag.foto" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                                </label>
+                            </div>
+                            <span>Seleccionar</span>
+                            <input type="hidden" name="Foto" id="Foto" value="@ViewBag.foto" />
 
+                        </center>
+                    }
+                    else
+                    {
+                        <center>
+                            <div>
+                                <input type="file" accept="image/*" id="fotosubir" />
+                                <label for="fotosubir">
+                                    <img src="~/Content/user.png" alt="Alternate Text" id="fotoejemplo" style="width:80px; height:80px; margin-top:15px;" />
+                                </label>
+                            </div>
+                            <span>Seleccionar</span>
+                            <input type="hidden" name="Foto" id="Foto" value="" />
+
+                        </center>
+                    }
+                    @if (@ViewBag.id != null)
+                    {
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.idSuplidor)
+                    }
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control nombre", @placeholder = "Ej: Juan" } })
+                            @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+
+                        </div>
+
+                        <div class="form-group col-md-5">
+
+                            @Html.Label("Dirección", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: calle #1" } })
+                            @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            @Html.Label("Teléfono", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
+                            @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
+
+                        </div>
+
+                        <div class="form-group col-md-3" style="width:24%;">
+
+                            @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
+                            @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group col-md-2 form1">
+
+                            @Html.Label("Tipo", new { @class = "control-label col-md-2" })
+                            @Html.DropDownList("idtipo", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.TipoSuplidor, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-md-1 boton">
+                            <a href="#" class="btn btn-outline-primary Datoscomprobante " data-toggle="modal" data-target="#exampleModal"><i class="fas fa-plus-circle icono"></i></a>
+
+                        </div>
+                        <div class="form-group col-md-3" style="margin-left:13px; width:22%;">
+                            @Html.Label("Persona Física", htmlAttributes: new { @class = "control-label", @style="margin-left:1px;" })
+                            @Html.EditorFor(model => model.Personafisica, new { htmlAttributes = new { @class = "form-control"} })
+                            @Html.ValidationMessageFor(model => model.Personafisica, "", new { @class = "text-danger" })
+
+                        </div>
                     </div>
 
-                    <div class="form-group col-md-5">
 
-                        @Html.Label("Dirección", htmlAttributes: new { @class = "control-label col-md-2" })
 
-                        @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ej: calle #1" } })
-                        @Html.ValidationMessageFor(model => model.direccion, "", new { @class = "text-danger" })
+
+
+                    <div class="form-group">
+                        <div class="col-md-7" style="width:53%;">
+                            @Html.Label("Correo", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                            @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingresa un Correo" } })
+                            @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+
+
+                    <div class="form-row">
+
+                        <div class="form-group col-md-10">
+
+                            @if (ViewBag.id != null)
+                            {
+
+                                <a class="btn btn-danger btnelimina" href="@Url.Action("Delete","suplidores",new { id=Model.idSuplidor})">Eliminar</a>
+                            }
+
+                        </div>
+                        <div class="form-group col-md-1">
+                            <button type="submit" class="btn btn-info" id="crear"><i class="fas fa-arrow-circle-left"></i></button>
+
+                        </div>
                     </div>
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-md-3">
-                        @Html.Label("Teléfono", htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "(999) 999-9999" } })
-                        @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
-
-                    </div>
-
-                    <div class="form-group col-md-3" style="width:24%;">
-
-                        @Html.Label("Cédula", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.cedula, new { htmlAttributes = new { @class = "form-control", @placeholder = "000-0000000-0" } })
-                        @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-
-
-
-
-                <div class="form-group">
-                    <div class="col-md-7" style="width:53%;">
-                        @Html.Label("Correo", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                        @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ingresa un Correo" } })
-                        @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-
-
-                <div class="form-row">
-
-                    <div class="form-group col-md-10">
-
-                        @if (ViewBag.id != null)
-                        {
-
-                            <a class="btn btn-danger btnelimina" href="@Url.Action("Delete","suplidores",new { id=Model.idSuplidor})">Eliminar</a>
-                        }
-
-                    </div>
-                    <div class="form-group col-md-1">
-                        <button type="submit" class="btn btn-info" id="crear"><i class="fas fa-arrow-circle-left"></i></button>
-
-                    </div>
-                </div>
-            </div>
             }
         </div>
     </div>
-</div>
 
+</div>
+<div class="modal fade modalciudad" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog model" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" id="cerrar1" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+
+                <div class="comprobante">
+
+
+                </div>
+
+            </div>
+            @*<div class="modal-footer">
+                    <button class="mybtn" id="mybtn">Cerrar</button>
+                </div>*@
+        </div>
+    </div>
+</div>
 <script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="~/Scripts/inputmask/inputmask.js"></script>
 <script src="~/Scripts/inputmask/inputmask.extensions.js"></script>
@@ -137,5 +176,38 @@
 
 
 
+    });
+</script>
+<script>
+    $(document).ready(function () {
+
+        $("#mybtn").click(function () {
+            $("#exampleModal").modal("hide");
+        });
+        $("#exampleModal").on('hidden.bs.modal', function () {
+
+            $(document).ready(function () {
+
+                $.post("Getsuplidor", {}, function (data) {
+
+
+                    $("#idtipo").empty();
+                    $.each(data, function (create, row) {
+                        $("#idtipo").append("<option value= '" + row.idTipoSuplidor + "'>" + row.Nombre + "</option>")
+                        $("#idtipo").val(row.idTipoSuplidor);
+                    });
+                });
+            })
+
+        });
+
+    });
+</script>
+<script>
+    $(document).ready(function () {
+
+        $(".Datoscomprobante").click(function () {
+            $(".comprobante").load("/TipoSuplidors/Create")
+        });
     });
 </script>
