Confirmar final con cotizacion

--- a/SpointLiteVersion/Views/Shared/_Layout.cshtml
+++ b/SpointLiteVersion/Views/Shared/_Layout.cshtml
@@ -149,6 +149,10 @@
                         <a class="collapse-item emp" href="@Url.Action("Index","facturas")"><i class="fas fa-shopping-cart"></i> <span>Facturas</span></a>
 
                     </li>
+                    <li class="">
+                        <a class="collapse-item emp" href="@Url.Action("Index","facturas")"><i class="fas fa-cogs"></i> <span>Preferencias</span></a>
+
+                    </li>
                 </ul>
             </section>
             <!-- /.sidebar -->
